cluster/apps/external/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_STUDIO}"
    external-dns/is-public: "true"
  #  hajimari.io/icon:
  name: gitlab
  namespace: external
spec:
  rules:
  - host: git.${SECRET_DOMAIN_STUDIO}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: gitlab
            port:
              number: 9080
  tls:
  - hosts:
    - git.${SECRET_DOMAIN_STUDIO}
    secretName: external-gitlab-cert
